[package]
name = "cyberdem"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
humantime-serde = { version = "1.1.1" }
