[package]
name = "cyberdem"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the Cyber DEM (SISO-REF-072-2024)"
readme = "README.md"
homepage = "https://cdn.ymaws.com/www.sisostandards.org/resource/resmgr/reference_documents_/siso-ref-072-2024.pdf"
repository = "https://github.com/Mathuiss/cyberdem-rs"
license = "MIT"
license-file = "LICENSE"
keywords = ["cyber", "modelling", "simulation", "effects"]

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
humantime-serde = { version = "1.1.1" }
